--- a/pricing.html
+++ b/pricing.html
@@ -1112,6 +1112,7 @@
             <div class="payment-badges">
                 <span class="payment-badge">Stripe</span>
                 <span class="payment-badge">PayPal</span>
+                <span class="payment-badge">Paddle</span>
                 <span class="payment-badge">Square</span>
                 <span class="payment-badge">Visa</span>
                 <span class="payment-badge">Mastercard</span>
