--- a/terms.html
+++ b/terms.html
@@ -507,7 +507,7 @@
                 </ul>
                 <p><strong>Payment Processing:</strong></p>
                 <ul>
-                    <li>Payments are processed securely by <strong>Stripe</strong>, <strong>PayPal</strong>, <strong>Square</strong>, and other trusted processors</li>
+                    <li>Payments are processed securely by <strong>Stripe</strong>, <strong>PayPal</strong>, <strong>Paddle</strong>, <strong>Square</strong>, and other trusted processors</li>
                     <li>We accept major credit cards (Visa, Mastercard, American Express), debit cards, and PayPal</li>
                     <li>Cryptocurrency payments may be accepted for select products</li>
                     <li>All transactions are encrypted using industry-standard SSL/TLS</li>
