--- a/contact.html
+++ b/contact.html
@@ -498,9 +498,10 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="packs.html">Packs</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="partners.html">Join Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms</a></li>
             </ul>
             <div class="mobile-menu" onclick="toggleMenu()">
                 <span></span>
