--- a/index.html
+++ b/index.html
@@ -777,9 +777,10 @@
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="packs.html">Packs</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="partners.html">Join Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms</a></li>
                 <li><a href="services.html" class="btn btn-primary">Get Started</a></li>
             </ul>
         </nav>
