--- a/services.html
+++ b/services.html
@@ -466,9 +466,10 @@
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="packs.html">Packs</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="partners.html">Join Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms</a></li>
                 <li><a href="contact.html" class="btn btn-primary">Get a Quote</a></li>
             </ul>
         </nav>
