--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Vanish Video Editing</title>
-    <meta name="description" content="Get in touch with Vanish Video Editing. Request a quote, ask questions, or start your video editing project today.">
+    <title>Contact Us | Get a Free Video Editing Quote | Vanish</title>
+    <meta name="description" content="Contact Vanish Video Editing for a free quote. Start your video editing project today. Fast response within 24 hours. YouTube, TikTok, podcast & business video editing.">
+    <meta name="keywords" content="contact video editor, video editing quote, hire video editor, video editing inquiry, get video edited, YouTube editor contact, content creator services">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Contact Vanish Video Editing">
+    <meta property="og:description" content="Get a free video editing quote. Fast 24-hour response. Start your project today.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
