--- a/partners.html
+++ b/partners.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Our Team | Vanish Video Editing</title>
-    <meta name="description" content="Join Vanish Video Editing as an editor or partner. We're looking for talented video editors and content creators to collaborate with.">
+    <title>Join Our Team | Video Editor Jobs & Creator Partnerships</title>
+    <meta name="description" content="Join Vanish Video Editing as a freelance video editor or content creator partner. Remote work, flexible hours, competitive pay. Now hiring video editors worldwide.">
+    <meta name="keywords" content="video editor jobs, freelance video editor, remote video editing jobs, content creator partnership, video editing career, work from home video editor, YouTube editor hiring, gaming editor jobs">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Video Editor Jobs & Partnerships | Vanish">
+    <meta property="og:description" content="Join our team as a freelance video editor or content creator partner. Remote work, flexible hours.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
