--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Vanish Video Editing</title>
-    <meta name="description" content="View our portfolio of video editing work. See examples of YouTube videos, social media clips, podcasts, and business videos we've created.">
+    <title>Video Editing Portfolio | Our Work | Vanish Video Editing</title>
+    <meta name="description" content="Browse our video editing portfolio. See examples of YouTube videos, gaming content, TikTok clips, podcasts, vlogs & business videos we've edited for creators worldwide.">
+    <meta name="keywords" content="video editing portfolio, video editor samples, YouTube editing examples, content creator portfolio, gaming video examples, professional editing work, before after video editing">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Video Editing Portfolio | Vanish">
+    <meta property="og:description" content="See examples of our video editing work for YouTubers, gamers, and content creators.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
