--- a/services.html
+++ b/services.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services & Pricing | Vanish Video Editing</title>
-    <meta name="description" content="View our video editing services and pricing. YouTube editing, social media clips, podcast editing, and more. Transparent pricing with no hidden fees.">
+    <title>Video Editing Services & Pricing | Vanish Video Editing</title>
+    <meta name="description" content="Affordable video editing packages starting at $25. YouTube editing, TikTok clips, podcast editing, business videos & more. Transparent pricing, fast turnaround, pay only when satisfied.">
+    <meta name="keywords" content="video editing pricing, YouTube editing cost, affordable video editor, video editing packages, content creator editing rates, social media video editing price, podcast editing service, business video editing, professional editing rates">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Video Editing Services & Pricing | Vanish">
+    <meta property="og:description" content="Affordable video editing packages. YouTube, TikTok, podcasts & more. Pay only when satisfied.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
